2006-08-24  Kevin Kenny  <kennykb@acm.org>

	* library/tzdata: Regenerated, including several new files,
	from Olson's tzdata2006j.
	* library/clock.tcl: 
	* tests/clock.test: Removed an early testing hack that allowed
	loading 'registry' from the build tree rather than an installed
	one.  This is a workaround for [Bug 15232730], which remains open
	because it's a symptom of a deeper underlying problem.
	
2006-08-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParseExpr.c:	Minimal collection of new tests
	* tests/parseExpr.test:		testing the error messages of the
	new expr parser.  Several bug fixes and code simplifications that
	appeared during that effort.

2006-08-21  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclIOUtil.c:  Revisions to complete the thread finalization
        of the cwdPathPtr.  [Bug 1536142]

	* generic/tclParseExpr.c:	Revised mistaken call to
	TclCheckBadOctal(), so both [expr 08] and [expr 08z] have same
	additional info in error message.

	* tests/compExpr-old.test:	Update existing tests to not fail
	* tests/compExpr.test:		with the new expr parser.
	* tests/compile.test:
	* tests/expr-old.test:
	* tests/expr.test:
	* tests/for.test:
	* tests/if.test:
	* tests/parseExpr.test:
	* tests/while.test:

2006-08-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* win/Makefile.in (gdb): Make this target work so that debugging an
	msys build is possible.

2006-08-21  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c (Tcl_WaitForEvent): if the run loop is
	already running (e.g. if Tcl_WaitForEvent was called recursively),
	re-run it in a custom run loop mode containing only the source for the
	notifier thread, otherwise wakeups from other sources added to the
	common run loop modes might get lost.

	* unix/tclUnixNotfy.c (Tcl_WaitForEvent): on 64-bit Darwin,
	pthread_cond_timedwait() appears to have a bug that causes it to wait