@@ -251,9 +251,12 @@ the names of currently defined namespaces.
 .TP
 \fBnamespace upvar\fR \fInamespace\fR \fIotherVar myVar \fR?\fIotherVar myVar \fR...
 This command arranges for one or more local variables in the current
-procedure to refer to variables in \fInamespace\fR. The command 
+procedure to refer to variables in \fInamespace\fR. The namespace name is
+resolved as described in section \fBNAME RESOLUTION\fR.
+The command 
 \fBnamespace upvar $ns a b\fR has the same behaviour as
-\fBupvar 0 $ns::a b\fR.  
+\fBupvar 0 $ns::a b\fR, with the sole exception of the resolution rules
+used for qualified namespace or variable names. 
 \fBnamespace upvar\fR returns an empty string.
 .TP
 \fBnamespace unknown\fR ?\fIscript\fR?
